# cpp-lib-template

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake.yml
cmake/: packaging.cmake
include/my_lib/: my_lib.hpp
src/: core.cpp
tests/: CMakeLists.txt  test.cpp
